@@ -1,4 +1,7 @@
 2009-07-02	Mike Massonnet
+Set autostart file to false when user drops clipman from the notification area
+
+2009-07-02	Mike Massonnet
 Forgot to use plugin.h in main-panel-plugin.c
 
 2009-07-01	Mike Massonnet
